# Opt_SmallPolygons

./: .gitignore  CMakeLists.txt  results.txt
app/: solver.cpp  test.cpp
data/: in_test_10.txt  in_test_100.txt  in_test_11.txt  in_test_12.txt  in_test_13.txt  in_test_14.txt  in_test_15.txt  in_test_16.txt  in_test_17.txt  in_test_18.txt  in_test_19.txt  in_test_2.txt  in_test_20.txt  in_test_21.txt  in_test_22.txt  in_test_23.txt  in_test_24.txt  in_test_25.txt  in_test_26.txt  in_test_27.txt  in_test_28.txt  in_test_29.txt  in_test_30.txt  in_test_31.txt  in_test_32.txt  in_test_33.txt  in_test_34.txt  in_test_35.txt  in_test_36.txt  in_test_37.txt  in_test_38.txt  in_test_39.txt  in_test_4.txt  in_test_40.txt  in_test_41.txt  in_test_42.txt  in_test_43.txt  in_test_44.txt  in_test_45.txt  in_test_46.txt  (+167 more)
include/: simplex_insertion.hpp  simplex_insertion_2.hpp  small_polygons.hpp  small_polygons_solver.hpp  triangulation.hpp  util.hpp
scripts/: d.txt  error_points.txt  error_tour.txt  log.txt  picture.py  picture_segments.py  test.py  test_creator.py  test_runner.py  test_writer.py
src/: main.cpp  simplex_insertion.hpp  simplex_insertion_2.hpp  small_polygons_solver.hpp  util.cpp  util.hpp  version_1.cpp  version_2.cpp
submit/: version.cpp  version_3.cpp
